# beemo

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  rtd_requirements.txt
.github/workflows/: test.yml
beemo/: cli.py  post_types.py  pyproject.toml  scribe.py  settings.py  site_data.py  utils.py
beemo/analytics/: __init__.py  cli.py
beemo/cli/: __init__.py  arguments.py  options.py  utils.py
beemo/logs/: __init__.py  cli.py  ua.py
beemo/reports/: __init__.py  cli.py  enrich.py
blogbuild/: Makefile  pyproject.toml
blogbuild/blogbuild/: post_types.py  scribe.py  settings.py
blogbuild/blogbuild/static/: .htaccess  styles.css
blogbuild/blogbuild/templates/: page.pt  sitemap.pt  talks.pt
docs/: analytics.rst  conf.py  config.rst  content.rst  getting-started.rst  index.rst  output.rst  overview.rst  templates.rst  usage.rst
docs/api/: config.rst  index.rst  post-types.rst  scribe.rst  site-data.rst
docs/changelog/: 0.6.0.rst  0.6.1.rst  0.6.rst  index.rst
docs/cli/: analytics.rst  build.rst  index.rst  logs.rst
