[project]
name = "beemo"
version = "0.6.1"
description = "A Python-based static site generator. Bring your own content and templates and it'll quickly generate you a deployable HTML website/blog."
authors = [
    {name = "Ben Nuttall", email = "ben@bennuttall.com"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "structlog (>=25.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2)",
    "chameleon (>=4.6.0,<5.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "docutils (>=0.21,<0.23)",
    "typer (>=0.15.0)",
]

license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Internet",
]
readme = "README.md"

[project.optional-dependencies]
logs = [
    "lars",
    "user-agents (>=2.2)",
]

[project.urls]
Repository = "https://github.com/bennuttall/beemo"
Documentation = "https://beemo.readthedocs.io/"
Issues = "https://github.com/bennuttall/beemo/issues"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
sphinx = ">=7.0"
sphinx-rtd-theme = ">=3.0"
twine = "^6.2.0"
autodoc-pydantic = "^2.2.0"

[project.scripts]
beemo = "beemo.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"